@@ -58,6 +58,7 @@ DiodeFex = include             # Psana::Lusi::DiodeFexConfigV1, Psana::Lusi::Dio
 EBeam = include                # Psana::Bld::BldDataEBeamV0, Psana::Bld::BldDataEBeamV1, Psana::Bld::BldDataEBeamV2, Psana::Bld::BldDataEBeamV3, Psana::Bld::BldDataEBeamV4
 Encoder = include              # Psana::Encoder::ConfigV1, Psana::Encoder::ConfigV2, Psana::Encoder::DataV1, Psana::Encoder::DataV2
 Epics = include                # Psana::Epics::ConfigV1
+Epix = include                 # Psana::Epix::ConfigV1, Psana::Epix::ElementV1
 EpixSampler = include          # Psana::EpixSampler::ConfigV1, Psana::EpixSampler::ElementV1
 Evr = include                  # Psana::EvrData::ConfigV1, Psana::EvrData::ConfigV2, Psana::EvrData::ConfigV3, Psana::EvrData::ConfigV4, Psana::EvrData::ConfigV5, Psana::EvrData::ConfigV6, Psana::EvrData::ConfigV7, Psana::EvrData::DataV3
 EvrIO = include                # Psana::EvrData::IOConfigV1
